Fix the sortable metadata selections behavior. - In opus.css (line 731-741), add the required styling for sortable metadata   selections. - In widgets.js (line 138-147), create getMaxScrollTopVal to get the max   max scrollable height of the sortable container. This is used as the   callback function for sortable start event. - In widgets.js (line 149-161), create preventContinuousDownScrolling to   prevent continuous down scrolling when user keeps dragging the item down   after scrollbar reaches to the bottom-end. This is used as the sort   callback function for sortable sort event. - In selectMetadata.js (line 140-152), update the sortable instance with   start and sort callback functions. Use getMaxScrollTopVal for start   callback function and preventContinuousDownScrolling for sort callback   function. - In selectMetadata.js (line 16-19), create isSortingHappening to determine   if the sortable item sorting is happening. - In mutationObserver.js (line 190-195), if sortable metadata selections   is sorting, we don't want to set the scrollbar position. This will prevent   scrollbar position from being set to the end whenever a sorting is happening.

--- a/opus/application/static_media/css/opus.css
+++ b/opus/application/static_media/css/opus.css
@@ -735,6 +735,10 @@ narrow */
 .op-selected-metadata-column {
     border: 0;
     z-index: 9999;
+    /* The following stylings are required for sortable metadata selections */
+    overflow-x: auto !important;
+    overflow-y: hidden !important;
+    overscroll-behavior: contain;
 }
 
 .op-selected-metadata-column ul li {
